force-app/main/default/objects/Security_Audit_Log__c/Security_Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Journal d audit de sécurité. Trace les actions sensibles: changement MDP, tentatives échouées, création compte portail.</description>
    <label>Security Audit Log</label>
    <nameField>
        <displayFormat>SEC-{00000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Audit Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>