force-app/main/default/objects/Security_Audit_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Type d action: PASSWORD_SET, PASSWORD_CHANGE, TOKEN_CREATED, TOKEN_EXPIRED, TOKEN_FAILED, ACCOUNT_CREATED, LOGIN_FAILED_RATE_LIMIT</description>
    <label>Action</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>