force-app/main/default/objects/Security_Audit_Log__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Détails supplémentaires de l action (user agent, motif erreur, etc.)</description>
    <label>Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>