force-app/main/default/objects/Security_Audit_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Niveau de sévérité: INFO, WARNING, CRITICAL</description>
    <label>Severity</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>